--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,8 +8,8 @@
 </div>
 
 <p style="text-align: center;"><strong>Welcome to the BT&E RFID TEST DASHBOARD.</strong></p>
-<p style="text-align: center;">Use the tabs above to view detailed information, or click "REFRESH DATA" to update data immediately.</p>
-<p style="text-align: center;">THIS SERVER WILL BE THE MOST RECENT but may have crashes.</p>
+<p style="text-align: center;">Use the tabs above to view detailed information, or click "REFRESH" to update data immediately.</p>
+<p style="text-align: center;">THIS SERVER WILL BE THE MOST RECENT BUT MAY HAVE CRASHES.</p>
 <h3 style="padding-left: 240px;"><strong>Scanable Items-</strong></h3>
 <ul>
 <li style="list-style-type: none;">
