--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,7 +15,7 @@
         <ul class="nav nav-tabs">
             <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="/tab1/">Active Rentals</a></li>
-            <li class="nav-item"><a class="nav-link" href="/tab2/">Categories WIP</a></li>
+            <li class="nav-item"><a class="nav-link" href="/tab2/">Categories ALMOST</a></li>
             <li class="nav-item"><a class="nav-link" href="/tab3/">Service Items WIP</a></li>
             <li class="nav-item"><a class="nav-link" href="/tab4/">Full Inventory</a></li>
             <li class="nav-item"><a class="nav-link" href="/tab5/">Laundry Contracts</a></li>
